--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,12 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+tasks.jar {
+	manifest {
+		attributes["Main-Class"] = "me.dio.matheusmarti.springapi.RestApiApplication"
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
